--- a/extensions/web-tracker/wab/src/main/webapp/index.html
+++ b/extensions/web-tracker/wab/src/main/webapp/index.html
@@ -86,7 +86,7 @@
                         "condition": {
                             "type": "profilePropertyCondition",
                             "parameterValues": {
-                                "propertyName" : "properties.pageViewCount.unomi-tracker-test",
+                                "propertyName" : "properties.pageViewCount",
                                 "comparisonOperator" : "greaterThan",
                                 "propertyValueInteger" : 5
                             }
